Fix default map view on mobile
KB-334

--- a/styles/list-view.scss
+++ b/styles/list-view.scss
@@ -1,3 +1,7 @@
+.is-mobile .list-view {
+  display: none;
+}
+
 .list-view {
   height: calc(100vh - 268px);
   overflow: scroll;
